--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -12,13 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before you run the notebook, create a virtual environment using the following cmd in this directory\n",
-    "python3 -m venv venv\n",
-    "\n",
-    "Then select venv using\n",
-    "source venv/bin/activate\n",
-    "\n",
-    "Or alternatively make sure you install packages from requirements.txt"
+    "Before you run the notebook, create a virtual environment as mentioned in README.txt.\n",
+    "Install requirements.txt if not already done by running following cell."
    ]
   },
   {
