add model files and gitignore

--- a/model/dataset.ipynb
+++ b/model/dataset.ipynb
@@ -21,7 +21,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Before you run the notebook, create a virtual environment as mentioned in README.txt.\n",
+        "Before you run the notebook, create a virtual environment as mentioned in README.txt and make sure you are using that environment when running the cells.\n",
         "Install requirements.txt if not already done by running following cell."
       ]
     },
