--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -12,13 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before you run the notebook, create a virtual environment as mentioned in README.txt.\n",
+    "Before you run the notebook, create a virtual environment as mentioned in README.txt and make sure you are using that environment when running the cells.\n",
     "Install requirements.txt if not already done by running following cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "id": "JkO53EQ4x_Hg"
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "ICSARzDaLrmy"
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -169,7 +169,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -250,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -397,7 +397,7 @@
        "max         4.150000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "id": "rWcIItcPSPTb"
    },
@@ -556,7 +556,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "id": "RTJhRyrRSPTc"
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "ILTV_kQfmziM"
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "id": "ubaAtlvV4Xty"
    },
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -859,7 +859,7 @@
     "song_features[[\"tempo\"]] = scaler.fit_transform(song_features[[\"tempo\"]])\n",
     "song_features[[\"loudness\"]] = scaler.fit_transform(song_features[[\"loudness\"]])\n",
     "\n",
-    "display(song_features.head)"
+    "song_features"
    ]
   },
   {
@@ -887,45 +887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating Model: 100%|██████████| 146/146 [00:35<00:00,  4.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hit Rate: 0.1506849315068493\n",
-      "ARHR: 0.04172918025657752\n",
-      "Novelty: 1.4349315068493151\n",
-      "Precision: 0.024657534246575342\n",
-      "Recall: 0.04152249134948097\n",
-      "Fitting EASE with Features Model\n",
-      "Evalution score for EASE with features\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Evaluating Model: 100%|██████████| 146/146 [00:48<00:00,  3.01it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hit Rate: 0.13013698630136986\n",
-      "ARHR: 0.026872689715155475\n",
-      "Novelty: 1.33013698630137\n",
-      "Precision: 0.019178082191780823\n",
-      "Recall: 0.03229527104959631\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Evaluating Model:  36%|███▋      | 53/146 [00:16<00:25,  3.65it/s]"
      ]
     }
    ],
@@ -1020,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "pWjWdC1wNNLU"
    },
@@ -1188,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "2bhFGC6kZywc"
    },
