--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "id": "JkO53EQ4x_Hg"
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "id": "ICSARzDaLrmy"
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -169,7 +169,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -250,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -397,7 +397,7 @@
        "max         4.150000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "id": "rWcIItcPSPTb"
    },
@@ -556,7 +556,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "id": "RTJhRyrRSPTc"
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "id": "ILTV_kQfmziM"
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "id": "ubaAtlvV4Xty"
    },
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -801,8 +801,164 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>song_hotttnesss</th>\n",
+       "      <th>year</th>\n",
+       "      <th>key</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>loudness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SOBLFFE12AF72AA5BA</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.733372</td>\n",
+       "      <td>0.988636</td>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.370836</td>\n",
+       "      <td>0.851104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SOCSNVI12A8C13ECC2</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.375984</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.507469</td>\n",
+       "      <td>0.709938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SONHOTT12A8C13493C</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.526079</td>\n",
+       "      <td>0.681818</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.442629</td>\n",
+       "      <td>0.780254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SOIGICF12A8C141BC5</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.468998</td>\n",
+       "      <td>0.931818</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.341164</td>\n",
+       "      <td>0.761406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SOEPPTV12AC4689D86</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.526079</td>\n",
+       "      <td>0.943182</td>\n",
+       "      <td>0.454545</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.357248</td>\n",
+       "      <td>0.559072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152788</th>\n",
+       "      <td>SOFBODT12AB0180C40</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.253835</td>\n",
+       "      <td>0.840909</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.405399</td>\n",
+       "      <td>0.667785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152789</th>\n",
+       "      <td>SOISCAF12A8C142C8C</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.360371</td>\n",
+       "      <td>0.943182</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.573025</td>\n",
+       "      <td>0.718385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152790</th>\n",
+       "      <td>SOULKJA12A8C140620</td>\n",
+       "      <td>0.928571</td>\n",
+       "      <td>0.686652</td>\n",
+       "      <td>0.920455</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.299276</td>\n",
+       "      <td>0.686032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152791</th>\n",
+       "      <td>SOSULQJ12A8C144B79</td>\n",
+       "      <td>0.214286</td>\n",
+       "      <td>0.530026</td>\n",
+       "      <td>0.556818</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.338140</td>\n",
+       "      <td>0.689404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152792</th>\n",
+       "      <td>SOZPUEF12AF72A9F2A</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.392009</td>\n",
+       "      <td>0.897727</td>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.666706</td>\n",
+       "      <td>0.772708</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>152793 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.head of                    song_id     genre  song_hotttnesss      year       key  \\\n",
+       "                   song_id     genre  song_hotttnesss      year       key  \\\n",
        "0       SOBLFFE12AF72AA5BA  0.928571         0.733372  0.988636  0.090909   \n",
        "1       SOCSNVI12A8C13ECC2  0.928571         0.375984  0.545455  0.636364   \n",
        "2       SONHOTT12A8C13493C  0.928571         0.526079  0.681818  0.000000   \n",
@@ -828,11 +984,12 @@
        "152791     1  0.338140  0.689404  \n",
        "152792     1  0.666706  0.772708  \n",
        "\n",
-       "[152793 rows x 8 columns]>"
+       "[152793 rows x 8 columns]"
       ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -872,14 +1029,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting EASE Model\n",
+      "Fitting EASE Model\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Evalution score for EASE\n"
      ]
     },
@@ -887,7 +1050,45 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating Model:  36%|███▋      | 53/146 [00:16<00:25,  3.65it/s]"
+      "Evaluating Model: 100%|██████████| 146/146 [00:46<00:00,  3.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit Rate: 0.1506849315068493\n",
+      "ARHR: 0.04020439225918678\n",
+      "Novelty: 1.4349315068493151\n",
+      "Precision: 0.024657534246575342\n",
+      "Recall: 0.04152249134948097\n",
+      "Fitting EASE with Features Model\n",
+      "Evalution score for EASE with features\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating Model: 100%|██████████| 146/146 [01:15<00:00,  1.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit Rate: 0.13013698630136986\n",
+      "ARHR: 0.02583442052620135\n",
+      "Novelty: 1.33013698630137\n",
+      "Precision: 0.019178082191780823\n",
+      "Recall: 0.03229527104959631\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -982,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "pWjWdC1wNNLU"
    },
@@ -991,7 +1192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 171/171 [00:58<00:00,  2.94it/s]\n"
+      "100%|██████████| 171/171 [01:11<00:00,  2.40it/s]\n"
      ]
     },
     {
@@ -1109,7 +1310,7 @@
        "[1710 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "2bhFGC6kZywc"
    },
@@ -1159,14 +1360,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Recommend songs using song similarity:   0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Recommend songs using song similarity: 100%|██████████| 100/100 [00:08<00:00, 11.82it/s]\n"
+      "Recommend songs using song similarity: 100%|██████████| 100/100 [00:07<00:00, 13.08it/s]\n"
      ]
     },
     {
@@ -1284,7 +1478,7 @@
        "[900 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
